Cleaned up my css and html files, fixed spacing, removed thigns I didnt need

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,23 +6,6 @@ html {
     height: 100%;
 }
 
- /*JUST FOR TESTING PURPOSES*/
-/*#orange {*/
-    /*background-color: orange;*/
-/*}*/
-
-/*#blue {*/
-    /*background-color: blue;*/
-/*}*/
-
-/*#red {*/
-    /*background-color: red;*/
-/*}*/
-
-/*#green {*/
-    /*background-color: lawngreen;*/
-/*}*/
-
 h1 {
     font-family: 'Josefin Sans', sans-serif;
     display: block;
@@ -57,8 +40,6 @@ h3 {
     left: 15px;
     right: 15px;
     margin: 0 auto;
-
-
 }
 
 h3:hover {
@@ -89,13 +70,9 @@ h3:hover {
 
 }
 
-img:hover {
+.portfolioImage:hover, .linkImages:hover {
     border: 3px #4aaaa5 solid;
 }
-
-/*.pos1 {*/
-    /*position: relative;*/
-/*}*/
 
 .row2:after {
     content: "";
@@ -112,8 +89,6 @@ img:hover {
     width: 50%;
     padding: 10px;
     position: relative;
-
-
 }
 
 #h-style1 {
@@ -124,8 +99,6 @@ img:hover {
     color: #4aaaa5;
 }
 
-
-
 body {
     background-image: url("../images/ignasi_pattern_s.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -134,7 +107,6 @@ body {
     margin: auto;
     position: relative;
     padding-bottom: 90px;
-
 }
 
 header {
@@ -143,7 +115,6 @@ header {
     border: 2px #cccccc solid;
     box-shadow: -7px 7px 5px rgba(0, 0, 0, .3);
     min-height: 86px;
-
 }
 
 .row {
@@ -151,7 +122,6 @@ header {
     width: 960px;
     margin: auto;
     min-height: inherit;
-
 }
 
 .logo {
@@ -171,7 +141,6 @@ header {
     width: 58%;
     padding: 10px;
     margin: auto;
-
 }
 
 .button {
@@ -187,22 +156,18 @@ header {
     background-color: #666666;
 }
 
-/* unvisited link */
 a:link {
     color: #777777;
 }
 
-/* visited link */
 a:visited {
     color: #777777;
 }
 
-/* mouse over link */
 a:hover {
     color: #4aaaa5;
 }
 
-/* selected link */
 a:active {
     color: goldenrod;
 }
@@ -280,8 +245,6 @@ input {
         width: 727px;
     }
 
-
-
     .logo {
         width: 57%;
     }
@@ -295,25 +258,21 @@ input {
         float: left;
         margin: auto;
         margin-right: 15px;
-
     }
 
     .sidecontent {
         float: right;
         margin: auto;
-
     }
 
     .row {
         width: 727px;
-
     }
 
     .col {
         clear: both;
         width: 100%;
     }
-
 }
 
 @media only screen and (max-width: 768px) {
@@ -362,13 +321,11 @@ input {
 
     .row {
         width: 600px;
-
     }
 
     .col {
         clear: none;
     }
-
 }
 
 @media only screen and (max-width: 640px) {
@@ -389,8 +346,6 @@ input {
         width: 90vw;
     }
 
-
-
     .sidecontent {
         float: left;
         margin: auto;
@@ -403,7 +358,6 @@ input {
     .logo {
         width: 100%;
         clear: right;
-
     }
 
     .headerLinks {
@@ -416,12 +370,10 @@ input {
     .row {
         width: 100%;
         display: inline;
-
     }
 
     .col {
         clear: both;
     }
-
 }
 
